// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Size related props 1`] = `
"<ul class="var-pagination">
  <li class="var-pagination__item var-pagination__prev var-pagination__item--disabled var-pagination__item--simple"><i class="var-icon var-icon--set var-icon-chevron-left" style="transition-duration: 0ms;"></i></li>
  <li class="var-pagination__simple">
    <div class="var-input var--box" var-pagination-cover="">
      <div class="var-field-decorator var--box var-field-decorator--standard">
        <div class="var-field-decorator__controller" style="cursor: text; overflow: hidden; --field-decorator-middle-offset-left: 0px; --field-decorator-middle-offset-width: 0px; --field-decorator-middle-offset-height: 0px;">
          <div class="var-field-decorator__icon var-field-decorator--icon-non-hint"></div>
          <div class="var-field-decorator__middle var-field-decorator--middle-non-hint">
            <!--v-if--><input class="var-input__input" autocomplete="new-password" id="var-input-mock-id" type="text" style="--input-placeholder-color: var(--field-decorator-placeholder-color, var(--field-decorator-blur-color));">
          </div>
          <!--v-if-->
          <div class="var-field-decorator__icon var-field-decorator--icon-non-hint">
            <!--v-if-->
          </div>
        </div>
        <div class="var-field-decorator__line">
          <div class="var-field-decorator__dot"></div>
        </div>
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </div><span> / 6 <div class="var-pagination__simple-line"></div></span>
  </li>
  <li class="var-pagination__item var-pagination__next var-pagination__item--simple"><i class="var-icon var-icon--set var-icon-chevron-right" style="transition-duration: 0ms;"></i></li>
  <li class="var-pagination__size">
    <div class="var-menu var--box var-menu-select">
      <div class="var-pagination__size--open var-pagination__size--open--disabled"><span>20条 / 页</span><i class="var-icon var-icon--set var-icon-menu-down var-pagination__size--open-icon" style="transition-duration: 0ms;" var-pagination-cover=""></i></div>
      <!--teleport start-->
      <!--teleport end-->
    </div>
  </li>
  <!--v-if-->
  <!--v-if-->
</ul>"
`;

exports[`Size related props 2`] = `
"<ul class="var-pagination">
  <li class="var-pagination__item var-pagination__prev var-pagination__item--disabled var-pagination__item--simple"><i class="var-icon var-icon--set var-icon-chevron-left" style="transition-duration: 0ms;"></i></li>
  <li class="var-pagination__simple">
    <div class="var-input var--box" var-pagination-cover="">
      <div class="var-field-decorator var--box var-field-decorator--standard">
        <div class="var-field-decorator__controller" style="cursor: text; overflow: hidden; --field-decorator-middle-offset-left: 0px; --field-decorator-middle-offset-width: 0px; --field-decorator-middle-offset-height: 0px;">
          <div class="var-field-decorator__icon var-field-decorator--icon-non-hint"></div>
          <div class="var-field-decorator__middle var-field-decorator--middle-non-hint">
            <!--v-if--><input class="var-input__input" autocomplete="new-password" id="var-input-mock-id" type="text" style="--input-placeholder-color: var(--field-decorator-placeholder-color, var(--field-decorator-blur-color));">
          </div>
          <!--v-if-->
          <div class="var-field-decorator__icon var-field-decorator--icon-non-hint">
            <!--v-if-->
          </div>
        </div>
        <div class="var-field-decorator__line">
          <div class="var-field-decorator__dot"></div>
        </div>
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </div><span> / 6 <div class="var-pagination__simple-line"></div></span>
  </li>
  <li class="var-pagination__item var-pagination__next var-pagination__item--simple"><i class="var-icon var-icon--set var-icon-chevron-right" style="transition-duration: 0ms;"></i></li>
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</ul>"
`;

exports[`basic mode > disabled prop 1`] = `
"<ul class="var-pagination">
  <li class="var-pagination__item var-pagination__prev var-pagination__item--disabled var-elevation--2"><i class="var-icon var-icon--set var-icon-chevron-left" style="transition-duration: 0ms;"></i></li>
  <li class="var-pagination__item var-pagination__next var-pagination__item--disabled var-elevation--2"><i class="var-icon var-icon--set var-icon-chevron-right" style="transition-duration: 0ms;"></i></li>
  <li class="var-pagination__size var-pagination__item--disabled">
    <div class="var-menu var--box var-menu-select">
      <div class="var-pagination__size--open var-pagination__size--open--disabled"><span>10条 / 页</span><i class="var-icon var-icon--set var-icon-menu-down var-pagination__size--open-icon" style="transition-duration: 0ms;" var-pagination-cover=""></i></div>
      <!--teleport start-->
      <!--teleport end-->
    </div>
  </li>
  <!--v-if-->
  <!--v-if-->
</ul>"
`;

exports[`basic mode > mount 1`] = `
"<ul class="var-pagination">
  <li class="var-pagination__item var-pagination__prev var-pagination__item--disabled var-elevation--2"><i class="var-icon var-icon--set var-icon-chevron-left" style="transition-duration: 0ms;"></i></li>
  <li item-mode="basic" class="var-pagination__item var-elevation--2 var-pagination__item--active">1</li>
  <li item-mode="head" class="var-pagination__item var-elevation--2 var-pagination__item--hide">...</li>
  <li item-mode="basic" class="var-pagination__item var-elevation--2">2</li>
  <li item-mode="basic" class="var-pagination__item var-elevation--2">3</li>
  <li item-mode="basic" class="var-pagination__item var-elevation--2">4</li>
  <li item-mode="tail" class="var-pagination__item var-elevation--2">...</li>
  <li item-mode="basic" class="var-pagination__item var-elevation--2">13</li>
  <li class="var-pagination__item var-pagination__next var-elevation--2"><i class="var-icon var-icon--set var-icon-chevron-right" style="transition-duration: 0ms;"></i></li>
  <li class="var-pagination__size">
    <div class="var-menu var--box var-menu-select">
      <div class="var-pagination__size--open var-pagination__size--open--disabled"><span>10条 / 页</span><i class="var-icon var-icon--set var-icon-menu-down var-pagination__size--open-icon" style="transition-duration: 0ms;" var-pagination-cover=""></i></div>
      <!--teleport start-->
      <!--teleport end-->
    </div>
  </li>
  <li class="var-pagination__quickly">前往 <div class="var-input var--box" var-pagination-cover="">
      <div class="var-field-decorator var--box var-field-decorator--standard">
        <div class="var-field-decorator__controller" style="cursor: text; overflow: hidden; --field-decorator-middle-offset-left: 0px; --field-decorator-middle-offset-width: 0px; --field-decorator-middle-offset-height: 0px;">
          <div class="var-field-decorator__icon var-field-decorator--icon-non-hint"></div>
          <div class="var-field-decorator__middle var-field-decorator--middle-non-hint">
            <!--v-if--><input class="var-input__input" autocomplete="new-password" id="var-input-mock-id" type="text" style="--input-placeholder-color: var(--field-decorator-placeholder-color, var(--field-decorator-blur-color));">
          </div>
          <!--v-if-->
          <div class="var-field-decorator__icon var-field-decorator--icon-non-hint">
            <!--v-if-->
          </div>
        </div>
        <div class="var-field-decorator__line">
          <div class="var-field-decorator__dot"></div>
        </div>
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </div>
  </li>
  <li class="var-pagination__total">1-10 of 123 items</li>
</ul>"
`;

exports[`simple mode > disabled prop 1`] = `
"<ul class="var-pagination">
  <li class="var-pagination__item var-pagination__prev var-pagination__item--disabled var-pagination__item--simple"><i class="var-icon var-icon--set var-icon-chevron-left" style="transition-duration: 0ms;"></i></li>
  <li class="var-pagination__simple var-pagination__item--disabled">
    <div class="var-input var--box" var-pagination-cover="">
      <div class="var-field-decorator var--box var-field-decorator--standard var-field-decorator--disabled">
        <div class="var-field-decorator__controller var-field-decorator--disabled" style="overflow: hidden; --field-decorator-middle-offset-left: 0px; --field-decorator-middle-offset-width: 0px; --field-decorator-middle-offset-height: 0px;">
          <div class="var-field-decorator__icon var-field-decorator--icon-non-hint"></div>
          <div class="var-field-decorator__middle var-field-decorator--middle-non-hint">
            <!--v-if--><input class="var-input__input var-input--disabled" autocomplete="new-password" id="var-input-mock-id" disabled="" type="text" style="--input-placeholder-color: var(--field-decorator-placeholder-color, var(--field-decorator-blur-color));">
          </div>
          <!--v-if-->
          <div class="var-field-decorator__icon var-field-decorator--icon-non-hint">
            <!--v-if-->
          </div>
        </div>
        <div class="var-field-decorator__line var-field-decorator--line-disabled">
          <div class="var-field-decorator__dot var-field-decorator--line-disabled"></div>
        </div>
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </div><span> / 0 <div class="var-pagination__simple-line"></div></span>
  </li>
  <li class="var-pagination__item var-pagination__next var-pagination__item--disabled var-pagination__item--simple"><i class="var-icon var-icon--set var-icon-chevron-right" style="transition-duration: 0ms;"></i></li>
  <li class="var-pagination__size var-pagination__item--disabled">
    <div class="var-menu var--box var-menu-select">
      <div class="var-pagination__size--open var-pagination__size--open--disabled"><span>10条 / 页</span><i class="var-icon var-icon--set var-icon-menu-down var-pagination__size--open-icon" style="transition-duration: 0ms;" var-pagination-cover=""></i></div>
      <!--teleport start-->
      <!--teleport end-->
    </div>
  </li>
  <!--v-if-->
  <!--v-if-->
</ul>"
`;

exports[`simple mode > mount 1`] = `
"<ul class="var-pagination">
  <li class="var-pagination__item var-pagination__prev var-pagination__item--disabled var-pagination__item--simple"><i class="var-icon var-icon--set var-icon-chevron-left" style="transition-duration: 0ms;"></i></li>
  <li class="var-pagination__simple">
    <div class="var-input var--box" var-pagination-cover="">
      <div class="var-field-decorator var--box var-field-decorator--standard">
        <div class="var-field-decorator__controller" style="cursor: text; overflow: hidden; --field-decorator-middle-offset-left: 0px; --field-decorator-middle-offset-width: 0px; --field-decorator-middle-offset-height: 0px;">
          <div class="var-field-decorator__icon var-field-decorator--icon-non-hint"></div>
          <div class="var-field-decorator__middle var-field-decorator--middle-non-hint">
            <!--v-if--><input class="var-input__input" autocomplete="new-password" id="var-input-mock-id" type="text" style="--input-placeholder-color: var(--field-decorator-placeholder-color, var(--field-decorator-blur-color));">
          </div>
          <!--v-if-->
          <div class="var-field-decorator__icon var-field-decorator--icon-non-hint">
            <!--v-if-->
          </div>
        </div>
        <div class="var-field-decorator__line">
          <div class="var-field-decorator__dot"></div>
        </div>
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </div><span> / 13 <div class="var-pagination__simple-line"></div></span>
  </li>
  <li class="var-pagination__item var-pagination__next var-pagination__item--simple"><i class="var-icon var-icon--set var-icon-chevron-right" style="transition-duration: 0ms;"></i></li>
  <li class="var-pagination__size">
    <div class="var-menu var--box var-menu-select">
      <div class="var-pagination__size--open var-pagination__size--open--disabled"><span>10条 / 页</span><i class="var-icon var-icon--set var-icon-menu-down var-pagination__size--open-icon" style="transition-duration: 0ms;" var-pagination-cover=""></i></div>
      <!--teleport start-->
      <!--teleport end-->
    </div>
  </li>
  <!--v-if-->
  <li class="var-pagination__total">1-10 of 123 items</li>
</ul>"
`;
